[package]
name = "commix-rs"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["CORUM COLLECTIVE LLC (Santh Security)"]
license = "MIT OR Apache-2.0"
homepage = "https://santh.io"
documentation = "https://docs.rs/commix-rs"
repository = "https://github.com/santhsecurity/commix-rs"
description = "Type-safe asynchronous wrapper for the Commix OS command-injection engine"
readme = "README.md"
keywords = ["commix", "security", "command-injection", "os-injection", "vulnerability"]
categories = ["command-line-utilities", "web-programming"]
exclude = [".github/", "BACKLOG.md"]

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["process", "rt", "macros", "io-util", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"

[dev-dependencies]
proptest = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "rt", "macros", "io-util", "rt-multi-thread", "time", "sync"] }
tracing-subscriber = "0.3"

[package.metadata.santh]
status = "alpha"
